--- a/Variable.html
+++ b/Variable.html
@@ -12,14 +12,29 @@
 
 <script>
 
+//-----------Var--------------//
+
     var toys = 10
     var toys = 11   // var variable allow to redeclaration and reassign value// 
     console.log(toys);
+        {
+            var toys = 15   //last decler value display karshe
+            console.log(toys);
+        }
+    console.log(toys);
+
+//-------------let---------------//
 
     let car = 3
         car = 4     // let variable only allow to reassign//
     // let car = 5 ---- if you redecler same value is throw error
+    // console.log(car)
+        {
+            let car = 8
+            console.log(car);
+        }
     console.log(car)
+
 
     const bike = 10
     console.log(bike)  // const not allow to redeclartion and reassign//
